wp-content/themes/salefish/assets/scss/pages/home.scss
/* ... */
.blog_header,
.de_header,
.tr_header {
  display: none;
}

.page-template-page-homepage-au {
  .builders {
    margin-top: -63px;
    padding-top: 60px;
    padding-bottom: 100px;
  }

  .hero {
    padding-bottom: 60px;
    h1 {
      margin-bottom: 30px;
    }
  }

  .contact {
    .top {
      clip-path: polygon(0 0, 100% 10%, 100% 100%, 0 90%);

      @include rs990 {
        clip-path: polygon(0 0, 100% 7%, 100% 100%, 0 93%);
      }

      @include rs600 {
        clip-path: polygon(0 0, 100% 3%, 100% 100%, 0 97%);
      }
    }

    .middle_overlay {
      top: 40%;
      z-index: 2;
    }
  }

  .home .features .row .col.model_3d .inline {
    .img {
      width: 100%;

      img {
        width: 100%;
      }
    }
  }
}

.page-template-page-homepage-de {
  .de_header {
    display: flex;
  }
  header.default {
    display: none;
  }
}
.page-template-page-homepage-tr {
  .tr_header {
    display: flex;
  }
  header.default {
    display: none;
  }
}

/* release popup */
.selling_popup_container {
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  background: rgba(0, 0, 0, 0.6);
  z-index: 1000;
  display: none;
}

.selling_popup_container .phone_link {
  position: absolute;
  top: 85%;
  width: 100%;
  height: 4%;
  display: block;
}

.selling_popup_container .selling_popup {
  width: 500px;
  max-width: 90%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  max-height: 85vh;

  /* max-width: calc(85vh/0.80); */
  max-width: 90%;
}

.selling_popup_container .selling_popup .popup {
  width: 100%;
  display: none;
}

.selling_popup_container .selling_popup .close_icon {
  position: absolute;
  top: 20px;
  right: 20px;
  width: 30px;
  cursor: pointer;
  z-index: 3;
  display: none;
}

.scaling_builder_logo {
  scale: 1.5;
}

